--- a/src/examples/algo-demo/package.json
+++ b/src/examples/algo-demo/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "vite-project",
+  "name": "algo-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
